samples/_failures_safe/1761356553_65dbee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2871a739.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_2871a739.c:147:35: error: expected ‘)’ at end of input
  147 |         if (is_operator_char(lexer
      |                             ~     ^
      |                                   )
./samples/SAFE/__tmp_2871a739.c:147:9: error: expected declaration or statement at end of input
  147 |         if (is_operator_char(lexer
      |         ^~
./samples/SAFE/__tmp_2871a739.c:147:9: error: expected declaration or statement at end of input
